# issofa-merge

./: issofa_changelog.md  issofa_changelog.txt
SofaKernel/SofaFramework/: CMakeLists.txt  config.h.in
applications/projects/SofaDeformable_test/: CMakeLists.txt  FastTriangularBendingSpring_test.cpp
examples/Demos/: Coil.scn
examples/Objects/: InstrumentCoil.xml
modules/SofaBoundaryCondition/: ConicalForceField.h  ConstantForceField.h  ConstantForceField.inl  EllipsoidForceField.cpp  EllipsoidForceField.h  EllipsoidForceField.inl  PartialFixedConstraint.h  PartialFixedConstraint.inl  PlaneForceField.h  PlaneForceField.inl
modules/SofaComponentGeneral/: initComponentGeneral.cpp
modules/SofaConstraint/: BarycentricDistanceLMConstraintContact.inl  CMakeLists.txt  ConstraintAnimationLoop.cpp  ConstraintAttachBodyPerformer.inl  ContactIdentifier.cpp  FreeMotionAnimationLoop.cpp  FrictionContact.cpp  FrictionContact.h  FrictionContact.inl  GenericConstraintSolver.cpp  GenericConstraintSolver.h  LCPConstraintSolver.cpp  LCPConstraintSolver.h  LMConstraintSolver.cpp  LinearSolverConstraintCorrection.h  LinearSolverConstraintCorrection.inl  PrecomputedConstraintCorrection.inl  RigidMassComplianceEngine.cpp  RigidMassComplianceEngine.h  RigidMassComplianceEngine.inl  StickContactConstraint.inl  UncoupledConstraintCorrection.cpp  UncoupledConstraintCorrection.h  UncoupledConstraintCorrection.inl
modules/SofaExporter/: BlenderExporter.h  BlenderExporter.inl
modules/SofaGeneralDeformable/: FastTriangularBendingSprings.h  FastTriangularBendingSprings.inl  (+1 more)
(+282 files in other folders)
